--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-    home
-</body>
-</html>
+<div class="col-md-12">
+    <div class="panel panel-default">
+        <div class="panel-heading">欢迎</div>
+        <div class="panel-body">
+            备课平台
+        </div>
+    </div>
+</div>
