--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,10 @@
         <li ng-show="me" ng-class="{active:isActive('/home')}"><a href="#/home">首页</a></li>
         <li ng-hide="me" ng-class="{active:isActive('/reg')}"><a href="#/reg">注册</a></li>
         <li ng-hide="me" ng-class="{active:isActive('/login')}"><a href="#/login">登录</a></li>
+        <li ng-show="me" ng-class="{active:isActive('/student')}"><a href="#/student">学生管理</a></li>
+        <li ng-show="me" ng-class="{active:isActive('/exercise')}"><a href="#/exercise">习题管理</a></li>
     </ul>
-    <ul class="nav-navbar-nav navbar-rigth" ng-show="me">
+    <ul class="nav navbar-nav navbar-right" ng-show="me">
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                role="button">欢迎{{me.username}}<span class="caret"></span></a>
@@ -34,7 +36,10 @@
 <script src="./vendor/angular/angular.js"></script>
 <script src="./vendor/angular-route/angular-route.js"></script>
 <script src="./javascripts/app.js"></script>
+<script src="./javascripts/service/dataService.js"></script>
 <script src="./javascripts/controller/RegCtrl.js"></script>
 <script src="./javascripts/controller/LoginCtrl.js"></script>
 <script src="./javascripts/controller/NavBarCtrl.js"></script>
+<script src="./javascripts/controller/StuCtrl.js"></script>
+<script src="./javascripts/controller/ExerCtrl.js"></script>
 </html>
