--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -31,10 +31,10 @@
                         <span class="text-danger" ng-show="userform.password.$error.maxlength">长度不能大于12位</span>
                     </div>
                 </div>
-                <div class="col-sm-offset-5 col-sm-1" style="margin-top: 50px">
-                    <button type="submit" class="btn btn-lg btn-primary btn-enter">登录</button>
-                </div>
-                <div class="panel-footer" >
+                <div class="panel-footer clearfix" >
+                    <div class="col-sm-offset-5 col-sm-1">
+                        <button type="submit" class="btn btn-lg btn-primary btn-enter">登录</button>
+                    </div>
                 </div>
         </div>
         </form>
