--- a/public/pages/student.html
+++ b/public/pages/student.html
@@ -53,7 +53,7 @@
                 <h4 modal-title>添加学生</h4>
             </div>
             <div class="modal-body">
-                <form action="" role="form" class="form-horizontal"><input type="text" class="form-control" ng-model="stu._id" placeholder="ID"/>
+                <form action="" role="form" class="form-horizontal"><input type="text" class="form-control" ng-model="stu._id" placeholder="ID" disabled="true"/>
                     <div class="form-group">
                         <label for="stuid" class="col-sm-2 control-label">学号</label>
                         <div class="col-sm-10">
