--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html ng-app="classApp">
 <head>
     <meta charset="UTF-8">
-    <title>{{title}}</title>
+    <title>备课平台</title>
     <link rel="stylesheet" href="./vendor/bootstrap/dist/css/bootstrap.css">
 </head>
 <body style="margin-top:70px">
