--- a/public/pages/detail.html
+++ b/public/pages/detail.html
@@ -7,20 +7,26 @@
             <table class="table table-striped table-repsonsive">
                 <thead>
                 <tr>
+                    <td>文档ID</td>
                     <td>题干</td>
                     <td>A</td>
                     <td>B</td>
                     <td>C</td>
                     <td>D</td>
+                    <td>操作</td>
                 </tr>
                 </thead>
                 <tbody>
                 <tr ng-repeat="exer in exers track by $index">
+                    <td><input type="text" class="form-control" ng-model="exer._id" placeholder="ID" disabled="true" /></td>
                     <td>{{exer.title}}</td>
-                    <td>{{exer.A}}</td>
-                    <td>{{exer.B}}</td>
-                    <td>{{exer.C}}</td>
-                    <td>{{exer.D}}</td>
+                    <td>{{exer.CountA}}</td>
+                    <td>{{exer.CountB}}</td>
+                    <td>{{exer.CountC}}</td>
+                    <td>{{exer.CountD}}</td>
+                    <td class="text-center">
+                        <button data-index="{{$index}}" class="btn btn-primary" data-id="{{exer._id}}" ng-click="refresh()" refresh-details>刷新</button>
+                    </td>
                 </tr>
                 </tbody>
             </table>
