--- a/public/pages/exercise.html
+++ b/public/pages/exercise.html
@@ -60,7 +60,7 @@
                 <h4 modal-title>添加习题</h4>
             </div>
             <div class="modal-body">
-                <form action="" role="form" class="form-horizontal"><input type="text" class="form-control" ng-model="exer._id" placeholder="ID"/>
+                <form action="" role="form" class="form-horizontal"><input type="text" class="form-control" ng-model="exer._id" placeholder="ID" disabled="true" />
                     <div class="form-group">
                         <label for="title" class="col-sm-2 control-label">题干</label>
                         <div class="col-sm-10">
