--- a/public/pages/detail.html
+++ b/public/pages/detail.html
@@ -25,7 +25,7 @@
                     <td>{{exer.CountC}}</td>
                     <td>{{exer.CountD}}</td>
                     <td class="text-center">
-                        <button data-index="{{$index}}" class="btn btn-primary" data-id="{{exer._id}}" ng-click="refresh()" refresh-details>刷新</button>
+                        <button data-index="{{$index}}" class="btn btn-primary" data-id="{{exer._id}}" ng-click="refresh(exer._id)" refresh-details>刷新</button>
                     </td>
                 </tr>
                 </tbody>
