--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,15 @@
 <body style="margin-top:70px">
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="NavBarCtrl">
     <div class="navbar-header">
-        <a href="#/" class="navbar-brand">备课平台</a>
+        <a ui-sref="/" class="navbar-brand">备课平台</a>
     </div>
     <ul class="nav navbar-nav">
-        <li ng-show="me" ng-class="{active:isActive('/home')}"><a href="#/home">首页</a></li>
-        <li ng-hide="me" ng-class="{active:isActive('/reg')}"><a href="#/reg">注册</a></li>
-        <li ng-hide="me" ng-class="{active:isActive('/login')}"><a href="#/login">登录</a></li>
-        <li ng-show="me" ng-class="{active:isActive('/student')}"><a href="#/student">学生管理</a></li>
-        <li ng-show="me" ng-class="{active:isActive('/exercise')}"><a href="#/exercise">习题管理</a></li>
-        <li ng-show="me" ng-class="{active:isActive('/detail')}"><a href="#/detail">详情</a></li>
+        <li ng-show="me" ng-class="{active:isActive('/home')}" ><a ui-sref="/">首页</a></li>
+        <li ng-hide="me" ng-class="{active:isActive('/reg')}" ><a ui-sref="/reg">注册</a></li>
+        <li ng-hide="me" ng-class="{active:isActive('/login')}" ><a ui-sref="/login">登录</a></li>
+        <li ng-show="me" ng-class="{active:isActive('/student')}" ><a ui-sref="/student">学生管理</a></li>
+        <li ng-show="me" ng-class="{active:isActive('/exercise')}" ><a ui-sref="/exercise">习题管理</a></li>
+        <li ng-show="me" ng-class="{active:isActive('/detail')}" ><a ui-sref="/detail">详情</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right" ng-show="me">
         <li class="dropdown">
@@ -29,13 +29,14 @@
     </ul>
 </nav>
 <div class="contariner">
-    <div class="row" ng-view></div>
+    <div class="row" ui-view=""></div>
 </div>
 </body>
 <script src="./vendor/jquery/dist/jquery.js"></script>
 <script src="./vendor/bootstrap/dist/js/bootstrap.js"></script>
 <script src="./vendor/angular/angular.js"></script>
 <script src="./vendor/angular-route/angular-route.js"></script>
+<script src="./vendor/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="./javascripts/app.js"></script>
 <script src="./javascripts/service/dataService.js"></script>
 <script src="./javascripts/controller/RegCtrl.js"></script>
