--- a/public/pages/exercise.html
+++ b/public/pages/exercise.html
@@ -168,7 +168,7 @@
                 请问，你是否确认要发布?
             </div>
             <div class="modal-footer clearfix">
-                <button class="btn btn-danger" ng-click="change()" data-dismiss="modal">发布</button>
+                <button class="btn btn-danger" ng-click="change(exer._id)" data-dismiss="modal">发布</button>
                 <button class="btn btn-default"  data-dismiss="modal">取消</button>
             </div>
         </div>
