--- a/public/pages/exercise.html
+++ b/public/pages/exercise.html
@@ -22,7 +22,7 @@
                 </thead>
                 <tbody>
                 <tr ng-repeat="exer in exers track by $index">
-                    <td><input type="checkbox" data-id="{{exer._id}}" name="chkItem" select-exer-item/></td>
+                    <td class="text-center"><input type="checkbox" data-id="{{exer._id}}" name="chkItem" select-exer-item/></td>
                     <td>{{exer.title}}</td>
                     <td>{{exer.A}}</td>
                     <td>{{exer.B}}</td>
