--- a/public/pages/student.html
+++ b/public/pages/student.html
@@ -19,7 +19,7 @@
                 </thead>
                 <tbody>
                     <tr ng-repeat="stu in stus track by $index">
-                        <td><input type="checkbox" data-id="{{stu._id}}" name="chkItem" select-stu-item/></td>
+                        <td class="text-center"><input type="checkbox" data-id="{{stu._id}}" name="chkItem" select-stu-item/></td>
                         <td>{{stu.stuid}}</td>
                         <td>{{stu.stuname}}</td>
                         <td>{{stu.password}}</td>
