--- a/public/pages/exercise.html
+++ b/public/pages/exercise.html
@@ -85,18 +85,22 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="Answer" class="col-sm-2 control-label">答案</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" ng-model="exer.Answer" id="Answer" placeholder="Answer"/>
-                        </div>
+                        <label class="col-sm-2 control-label">答案</label>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="Answer" value="A" ng-model="exer.Answer">A
+                            </label>
+                            <label>
+                                <input type="radio" name="Answer" value="B" ng-model="exer.Answer">B
+                            </label>
+                            <label>
+                                <input type="radio" name="Answer" value="C" ng-model="exer.Answer">C
+                            </label>
+                            <label>
+                                <input type="radio" name="Answer" value="d" ng-model="exer.Answer">D
+                            </label>
+                        </div>>
                     </div>
-                    <div class="form-group">
-                        <label for="Status" class="col-sm-2 control-label">状态</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" ng-model="exer.Status" id="Status" placeholder="状态"/>
-                        </div>
-                    </div>
-                    未发布：wait，发布：online
                 </form>
             </div>
             <div class="modal-footer clearfix">
