--- a/public/pages/exercise.html
+++ b/public/pages/exercise.html
@@ -50,7 +50,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button class="close" data-dismiss="modal">&times;</button>
-                <h4 modal-title>添加习题</h4>
+                <h4 modal-title>添加/编辑习题</h4>
             </div>
             <div class="modal-body">
                 <form action="" role="form" class="form-horizontal"><input type="text" class="form-control" ng-model="exer._id" placeholder="ID" disabled="true" />
@@ -97,7 +97,7 @@
                                 <input type="radio" name="Answer" value="C" ng-model="exer.Answer">C
                             </label>
                             <label>
-                                <input type="radio" name="Answer" value="d" ng-model="exer.Answer">D
+                                <input type="radio" name="Answer" value="D" ng-model="exer.Answer">D
                             </label>
                         </div>>
                     </div>
