--- a/public/pages/student.html
+++ b/public/pages/student.html
@@ -43,7 +43,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button class="close" data-dismiss="modal">&times;</button>
-                <h4 modal-title>添加学生</h4>
+                <h4 modal-title>添加/编辑学生</h4>
             </div>
             <div class="modal-body">
                 <form action="" role="form" class="form-horizontal"><input type="text" class="form-control" ng-model="stu._id" placeholder="ID" disabled="true"/>
