修改单选，设置默认

--- a/public/pages/exercise.html
+++ b/public/pages/exercise.html
@@ -88,7 +88,7 @@
                         <label class="col-sm-2 control-label">答案</label>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="Answer" value="A" ng-model="exer.Answer">A
+                                <input type="radio" name="Answer" value="A" ng-model="exer.Answer" ng-checked="true">A
                             </label>
                             <label>
                                 <input type="radio" name="Answer" value="B" ng-model="exer.Answer">B
