--- a/public/pages/reg.html
+++ b/public/pages/reg.html
@@ -71,7 +71,7 @@
                     <label class="col-sm-offset-2 col-sm-2 control-label text-right">科目</label>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="course" value="语文" ng-model="user.course" checked="checked">语文
+                                <input type="radio" name="course" value="语文" ng-model="user.course" ng-checked="true">语文
                             </label>
                             <label>
                                 <input type="radio" name="course" value="数学" ng-model="user.course">数学
