编辑框界面调整

--- a/public/pages/exercise.html
+++ b/public/pages/exercise.html
@@ -99,7 +99,7 @@
                             <label>
                                 <input type="radio" name="Answer" value="D" ng-model="exer.Answer">D
                             </label>
-                        </div>>
+                        </div>
                     </div>
                 </form>
             </div>
